# obsidian-semantic-search

./: .gitignore  Cargo.toml  README.md  esbuild.config.mjs  main.ts  manifest.json  package.json  styles.css  versions.json
src/: embedding.rs  error.rs  file_processor.rs  generate_input.rs  lib.rs  obsidian.rs  temp.rs
src/settings/: settings.ts
src/ui/: generateEmbeddingsModal.ts  linkSuggest.ts  queryModal.ts  suggestion.ts
types/obsidian/: index.d.ts
