[package]
name = "obsidian-rust-plugin"
version = "0.1.0"
authors = ["Stephen Solka <solka@angel.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.49"
console_log = "1.0.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
derive_builder = "0.12.0"
csv = "1.1"
